Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.0
-
None
-
QT Creator 4.5.0 on Windows 7 Enterprise.
Description
When I add a custom compiler in the settings under Build & Run > Compilers, I can specify predefined macros. However, since version 4.5, storing these macros does not work anymore. When opening the dialogue again (after clicking 'Apply', of course), the predefined macros are empty again. Apparently, the entered macros are also not used by the code analyzer.
This used to work in previous versions. The macros are also removed from the custom compilers created with older QT Creator versions.